@@ -32,9 +32,6 @@
 #    statement from all source files in the program, then also delete it here.
 #
 
-#
-
-
 import gtk, gtk.glade
 import os.path
 import cPickle
@@ -91,7 +88,7 @@ class PeersTab(Tab):
         column.set_clickable(True)
         column.set_resizable(True)
         column.set_expand(False)
-        column.set_min_width(10)
+        column.set_min_width(20)
         column.set_reorderable(True)
         self.listview.append_column(column)
 
@@ -107,7 +104,7 @@ class PeersTab(Tab):
         column.set_clickable(True)
         column.set_resizable(True)
         column.set_expand(False)
-        column.set_min_width(10)
+        column.set_min_width(100)
         column.set_reorderable(True)
         self.listview.append_column(column)
 
@@ -120,7 +117,7 @@ class PeersTab(Tab):
         column.set_clickable(True)
         column.set_resizable(True)
         column.set_expand(False)
-        column.set_min_width(10)
+        column.set_min_width(100)
         column.set_reorderable(True)
         self.listview.append_column(column)
 
@@ -133,7 +130,7 @@ class PeersTab(Tab):
         column.set_clickable(True)
         column.set_resizable(True)
         column.set_expand(False)
-        column.set_min_width(10)
+        column.set_min_width(100)
         column.set_reorderable(True)
         self.listview.append_column(column)
 
@@ -146,7 +143,7 @@ class PeersTab(Tab):
         column.set_clickable(True)
         column.set_resizable(True)
         column.set_expand(False)
-        column.set_min_width(10)
+        column.set_min_width(50)
         column.set_reorderable(True)
         self.listview.append_column(column)
 
@@ -159,7 +156,7 @@ class PeersTab(Tab):
         column.set_clickable(True)
         column.set_resizable(True)
         column.set_expand(False)
-        column.set_min_width(10)
+        column.set_min_width(50)
         column.set_reorderable(True)
         self.listview.append_column(column)
 
